# MacHue

./: .gitignore  README.md  pyproject.toml
machue/: cli.py  config.py  hue.py  tui.py
scripts/: install_onedir.sh
tests/: test_cli.py  test_config.py  test_hue.py
